[project]
name = "vetcownect"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pierre A", email = "rnormgeek@gmail.com" }
]
dependencies = [
    "streamlit>=1.36.0",
    "polars>=1.1.0",
    "pandas>=2.2.2",
    "black>=24.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vetcownect"]
